engine/tests/fixtures/invalid/http-api-semantics/entity-task.tg
entity entity_task {
  name "Task"
  description "Task entity"

  fields {
    id uuid required
  }

  status active
}
